# cpp-co-learning

./: .gitignore  README.md  Zee.md  gitignore.txt  index.html  intermediate-topics.md
20-min-projects/is-it-a-tree/: README.md  main.cpp
20-min-projects/lambda/: README.md
beginnersPresentation/: index.html
beginnersPresentation/zee/: computation.html  (+2 more)
cmake/: README.md
learnxinyminutes-docs/: c++11.html.markdown
programming-principles-and-practice/: README.md
programming-principles-and-practice/12-display-model/Richard/GraphExperiments/: CMakeLists.txt  main.cpp
programming-principles-and-practice/12-display-model/Richard/GraphExperiments/nbproject/: configurations.xml  project.xml
programming-principles-and-practice/12-display-model/ale/00-axis/: CMakeLists.txt  README.md  axis.cpp  main.cpp  mainWindow.cpp
programming-principles-and-practice/12-display-model/ale/00-sine/: CMakeLists.txt  README.md  axis.h  mainWindow.cpp  plotter.cpp  plotter.h
programming-principles-and-practice/12-display-model/ale/00-triangle/: CMakeLists.txt  README.md  mainWindow.cpp  mainWindow.h
programming-principles-and-practice/12-display-model/ale/myproject/: CMakeLists.txt  firstexample.cpp
programming-principles-and-practice/12-display-model/ale/myproject/graphicscode/: Window.cpp
programming-principles-and-practice/12-display-model/christian/myproject/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  firstexample.cpp
programming-principles-and-practice/13-graphics-classes/Richard/ImprovedAcidSmiley/: CMakeLists.txt  GUI.h  Graph.h  Point.h  README.md  Simple_window.h  Smiley.cpp  Smiley.h  Window.h  fltk.h  main.cpp  std_lib_facilities.h
programming-principles-and-practice/13-graphics-classes/ale/00-circles/: CMakeLists.txt  mainWindow.cpp
programming-principles-and-practice/13-graphics-classes/ale/00-colors-table/: CMakeLists.txt  mainWindow.cpp
programming-principles-and-practice/13-graphics-classes/ale/00-grid/: CMakeLists.txt  mainWindow.cpp
programming-principles-and-practice/15-graphing/ale/16.7/: CMakeLists.txt  Menues_window.cpp  Menues_window.h  main.cpp
programming-principles-and-practice/15-graphing/ale/16.7/window-graph/: 00-window-graph.vcxproj  fltk.h
programming-principles-and-practice/23-text-and-regular-expresions/Gruppe_A/: CMakeLists.txt  CMakeLists.txt~  FetchWebPage.cpp  testcontent2.html
programming-principles-and-practice/23-text-and-regular-expresions/Richard/BlickWinner/: BlickWinner.cpp  CMakeLists.txt  Readme.MD
programming-principles-and-practice/23-text-and-regular-expresions/Richard/FetchWebPage/: CMakeLists.txt  FetchWebPage.cpp
programming-principles-and-practice/26-testing/Richard/testproject/: CMakeLists.txt  CMakeLists.txt.in  Diagram.odg  HelloWorld.cpp  Readme.md  multnumbers.cpp  sumnumbers.cpp  sumnumbers_test.cpp  unit-tests.cpp
programming-principles-and-practice/26-testing/ale/tdd/: CMakeLists.txt  README.md
programming-principles-and-practice/26-testing/ale/testing-main-library/: CMakeLists.txt  README.md  main-test.cpp  main.cpp  numbers.cpp  numbers.h
programming-principles-and-practice/26-testing/luca/: CMakeLists.txt  googletest_preparation.txt  main.cpp
programming-principles-and-practice/wxwidgets/christian/wxSuperprg/: .gitignore  CMakeLists.txt  superprg.cpp
randomNumberGame/: main.cpp  randomGame.hpp
topics/: intermediate-topics.md
topics/cmake/ale/01/: CMakeLists.txt
topics/design-patterns/decorator/richard/: CMakeLists.txt  Decorator.cpp  DecoratorBroken.cpp  DecoratorFixed.cpp  EarlyBinding.cpp  LateBinding.cpp  ReadMe.md
topics/design-patterns/decorator/richard/Java/LateBinding/: build.xml
topics/design-patterns/decorator/richard/Java/LateBinding/nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
topics/design-patterns/decorator/richard/Java/LateBinding/src/: Bar.java  Foo.java  FooBar.java  LateBinding.java
topics/graphics/richard/SfmlHelloWorld/: CMakeLists.txt  Readme.md  main.cpp
topics/graphics/richard/glfw/: CMakeLists.txt  main.cpp
topics/machine-learning/logreg/richard/: CMakeLists.txt  FindMlpack.cmake  MyApp.cpp  MyFrame.cpp  MyFrame.h  MyFrame_generated.cpp  MyFrame_generated.h  XYChart.cpp  XYChart.h  dataset.csv  linReg.h  linear_regression_cli.cpp  main.cpp  predict.csv  readme.md
topics/machine-learning/logreg/richard/src-formbuilder/: MyFrame_generated.cpp  MyFrame_generated.h  MyGui.fbp
topics/project-cards/richard/GraphFromLinks/: .gitignore  CMakeLists.txt  CurlWrapper.h  Doxyfile  Link.h  LinkParser.h  Readme.MD  graph.cpp  json.hpp  pacakges.config  webServer.h
topics/project-cards/richard/GraphFromLinks/web/: index.html
topics/threads/Richard/: CMakeLists.txt  Readme.md  YesNoThreadsMutex.cpp  escalator.cpp
topics/threads/Richard/Escalator/: CMakeLists.txt  YesNoThreads.cpp  YesNoThreadsMutex.cpp
topics/threads/Richard/QueueOnSfml/: QueueOnSfml.sln  Readme.md
topics/threads/Richard/QueueOnSfml/QueueOnSfml/: QueueOnSfml.cpp  QueueOnSfml.vcxproj  QueueOnSfml.vcxproj.filters  ReadMe.txt  stdafx.cpp
topics/wxwidgets/Richard/ObserverGUI/: .gitignore  AvgPriceObserver.cpp  AvgPriceObserver.h  CMakeLists.txt  Definitions.h  Doxyfile  HighPriceObserver.cpp  HighPriceObserver.h  LowPriceObserver.cpp  LowPriceObserver.h  MyApp.cpp  MyFrame.cpp  MyFrame.h  MyFrame_generated.cpp  MyFrame_generated.h  PriceObserver.cpp  PriceObserver.h  PricePublisher.cpp  PricePublisher.h  Readme.md  TextCtrlPriceObserver.cpp  TextCtrlPriceObserver.h  XYChart.h
topics/wxwidgets/Richard/ObserverGUI/src-formbuilder/: MyFrame_generated.cpp  MyFrame_generated.h  ObserverGUI.fbp  ObserverGUIMyFrame_generated.cpp  ObserverGUIMyFrame_generated.h  noname.cpp  noname.h
topics/zmq/Richard/: CMakeLists.txt  hwclient.cpp  hwserver.cpp  main.tests.cpp
topics/zmq/Richard/pub-sub/: CMakeLists.txt  Readme.md  greedyclient.cpp  hwclient.cpp  hwserver.cpp  javaclient.java
topics/zmq/luca/: CMakeLists.txt  hwclient.cpp  hwserver.cpp
topics/zmq/luca/inproc/: CMakeLists.txt  main.cpp
visual-studio/: README.md
xcode/: README.md
(+1128 files in other folders)
