CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(FetchWebPage)

set (CMAKE_CXX_STANDARD 11)

FIND_PACKAGE( CURL REQUIRED )
FIND_PACKAGE( Boost REQUIRED COMPONENTS regex)

INCLUDE_DIRECTORIES(
    ${CURL_INCLUDE_DIRS}
    ${Boost_INCLUDE_DIRS}
)

ADD_EXECUTABLE (FetchWebPage
    FetchWebPage.cpp
)

TARGET_LINK_LIBRARIES(
    FetchWebPage
    ${CURL_LIBRARIES}
    ${Boost_LIBRARIES}
)
