CMAKE_MINIMUM_REQUIRED( VERSION 3.2 )
PROJECT( graph )
set ( CMAKE_CXX_STANDARD 17 )
#set ( CMAKE_BUILD_TYPE Debug )

FIND_PACKAGE( CURL REQUIRED )
FIND_PACKAGE( LibXml2 REQUIRED )


INCLUDE_DIRECTORIES(
    ${CURL_INCLUDE_DIRS}
    ${LIBXML2_INCLUDE_DIR}
)

ADD_EXECUTABLE (graph
    graph.cpp
)

TARGET_LINK_LIBRARIES(
    graph
    ${CURL_LIBRARIES}
    ${LIBXML2_LIBRARIES}
)
