CMAKE_MINIMUM_REQUIRED( VERSION 3.2 )
PROJECT( graph )
set ( CMAKE_CXX_STANDARD 17 )
#set ( CMAKE_BUILD_TYPE Debug )

IF (UNIX)
    FIND_PACKAGE( CURL REQUIRED )
    FIND_PACKAGE( LibXml2 REQUIRED )

    set(BOOST_COMPONENTS system filesystem thread)
    find_package(Boost 1.53.0 COMPONENTS ${BOOST_COMPONENTS} REQUIRED)
    find_package(Threads REQUIRED)

    INCLUDE_DIRECTORIES(
        ${CURL_INCLUDE_DIRS}
        ${LIBXML2_INCLUDE_DIR}
        ${Boost_INCLUDE_DIR}
        ${CMAKE_THREAD_LIBS_INIT}
    )
ENDIF()

ADD_EXECUTABLE (graph
    graph.cpp
)

IF (UNIX)
    TARGET_LINK_LIBRARIES(
        graph
        ${CURL_LIBRARIES}
        ${LIBXML2_LIBRARIES}
        ${Boost_LIBRARIES}
        ${CMAKE_THREAD_LIBS_INIT}
    )
ENDIF()

FILE(COPY ${CMAKE_CURRENT_SOURCE_DIR}/web
     DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
